# plotcraft

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  TODO.md
app_plotcraft/: CMakeLists.txt  draw_pane.cpp  draw_pane.h  draw_primitives.h  example1.h  example2.h  example_multiple1.h  example_single1.h  example_single2.h  i_example.h  i_example_factory.h  main.cpp  my_frame.cpp  my_frame.h
app_plotcraft/include/: example_factory.h  simplex_noise.h
app_plotcraft/src/: CMakeLists.txt  my_frame.cpp  simplex_noise.cpp
docs/: mainpage.md
include/plotcraft/: plotcraft.h
include/plotcraft/controller/: create_fig_and_axes_controller.h  create_plot_controller.h  draw_controller.h  fig_and_axes_controller.h  plot_controller.h  set_axes_properties_controller.h  set_figure_properties_controller.h  set_plot_list_properties_controller.h
include/plotcraft/data/: axes.h  axis.h  create_fig_and_axes_data_adapter.h  create_plot_data_adapter.h  data2d.h  draw_figure_data_adapter.h  figure.h  margins.h  plot2d.h  repository.h  set_axes_properties_data_adapter.h  set_figure_properties_data_adapter.h  set_plot_list_properties_data_adapter.h
include/plotcraft/entities/: axes.h  axis.h  clipping.h  color.h  draw_axes.h  draw_axis.h  draw_figure.h  draw_legend.h  draw_marker.h  draw_plot2d.h  figure.h  i_draw_primitives.h  i_measure.h  legend.h  line.h  locators.h  margins.h  marker_style.h  orientation.h  plot2d.h  point.h  rect.h  transform.h
include/plotcraft/framework/: id_generator.h
include/plotcraft/gateway/: create_fig_and_axes_repo_gateway.h  create_plot_repo_gateway.h  draw_figure_repo_gateway.h  i_measure.h  measure_gateway.h  set_axes_properties_repo_gateway.h
include/plotcraft/presenter/: create_fig_and_axis_presenter.h  create_plot_presenter.h  draw_presenter.h  fig_and_axis_presenter.h  i_draw_primitives.h  plot_presenter.h  set_axes_properties_presenter.h  set_figure_properties_presenter.h  set_plot_list_properties_presenter.h
include/plotcraft/services/: id_generator.h
include/plotcraft/use_cases/: i_id_generator.h  i_measure.h
include/plotcraft/use_cases/draw/: clipping.h  draw_axes.h  draw_axis.h  draw_figure.h  draw_figure_interactor.h  draw_legend.h  draw_marker.h  draw_plot2d.h  i_draw_figure_data_access.h  i_draw_figure_input.h  i_draw_figure_output.h  i_draw_figure_repo_access.h  i_draw_primitives.h  i_measure.h  locators.h
include/plotcraft/use_cases/model/: create_fig_and_axes_interactor.h  create_plot_interactor.h  i_create_fig_and_axes_data_access.h  i_create_fig_and_axes_input.h  i_create_fig_and_axes_output.h  i_create_fig_and_axes_repo_access.h  i_create_plot_data_access.h  i_create_plot_input.h  i_create_plot_output.h  i_create_plot_repo_access.h  i_set_axes_properties_data_access.h  i_set_axes_properties_input.h  i_set_axes_properties_output.h  i_set_axes_properties_repo_access.h  i_set_figure_properties_data_access.h  i_set_figure_properties_input.h  i_set_figure_properties_output.h  i_set_plot_list_properties_data_access.h  i_set_plot_list_properties_input.h  i_set_plot_list_properties_output.h  set_axes_properties_interactor.h  set_figure_properties_interactor.h  set_plot_list_properties_interactor.h
src/: CMakeLists.txt
src/plotcraft/: plotcraft.cpp
tests/: CMakeLists.txt
tests/plotcraft/entities/: helpers_draw_primitives.h  mock_draw_primitives.h  mock_measure.h  test_draw_legend.cpp  test_draw_plot2d.cpp  test_locators.cpp  test_transform.cpp
tests/plotcraft/use_cases/draw/: helpers_draw_primitives.h  mock_draw_marker.h  mock_draw_primitives.h  mock_measure.h  test_draw_legend.cpp  test_draw_plot2d.cpp  test_locators.cpp
